--- a/doc/style.css
+++ b/doc/style.css
@@ -1,5 +1,4 @@
-style{
-*{ margin:0; padding:0; font-family: sans-serif}
+style{margin:0; padding:0; font-family: sans-serif}
 .banner{
 width:100%;
 height:100vh;
@@ -90,7 +89,7 @@ border: none;
 
 }
 
-}
+
 
 
 
